--- a/templates/document_head.hbs
+++ b/templates/document_head.hbs
@@ -2,3 +2,7 @@
 <!-- Make the translated search clear button label available for use in JS -->
 <!-- See buildClearSearchButton() in script.js -->
 <script type="text/javascript">window.searchClearButtonLabelLocalized = "{{t 'search_clear'}}";</script>
+<link href="https://api.fontshare.com/css?f[]=satoshi@700&amp;display=swap" rel="stylesheet">
+<link href="https://api.fontshare.com/css?f[]=satoshi@500&amp;display=swap" rel="stylesheet">
+<link href="https://api.fontshare.com/css?f[]=satoshi@400&amp;display=swap" rel="stylesheet">
+<link href="https://api.fontshare.com/css?f[]=satoshi@300&amp;display=swap" rel="stylesheet">
